@@ -96,6 +96,10 @@ debian-installer (2009xxxx) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Update s390 to 2.6.30-1 using -s390x (64-bits) kernel.
 
+  [ Max Vozeler ]
+  * build/Makefile: Support ROOTCMD with fallback to fakeroot unless
+    overriden or already running as root.
+
  -- Frans Pop <fjp@debian.org>  Sat, 25 Jul 2009 03:40:58 +0200
 
 debian-installer (20090123) unstable; urgency=low
